# oxide

./: Cargo.toml  DEVLOG.md  README.md  build.rs  build.sh  roadmap.md  serve.sh
.github/workflows/: rust.yml
benches/: render.rs
src/: bluenoise.rs  bvh.rs  camera.rs  lib.rs  light.rs  main.rs  material.rs  renderer.rs  scene.rs  sky.rs  vec3.rs  wasm.rs  world.rs
src/geometry/: mesh.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
web/: _headers  index.html  index.js  render-worker.js
web/pkg/: hydroxide.d.ts  hydroxide.js  hydroxide_bg.wasm  hydroxide_bg.wasm.d.ts  index.js  oxide.d.ts  oxide.js  oxide_bg.wasm  oxide_bg.wasm.d.ts
web/pkg/snippets/wasm-bindgen-rayon-38edf6e439f6d70d/src/: workerHelpers.js
