[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fastrand = "2.3.0"
rayon = "1.11.0"
stl_io = "0.11.0"


image = { version = "0.25.9", optional = true }
rand = { version = "0.10.0", optional = true }


wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-rayon = { version = "1.3.0", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
indicatif = { version = "0.18.4", features = ["rayon"] }

[features]
default = ["native"]
native = ["image"]
wasm = ["wasm-bindgen", "wasm-bindgen-rayon", "js-sys", "web-sys"]

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "render"
harness = false

[[bin]]
name = "oxide"
path = "src/main.rs"
required-features = ["native"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Fast local builds with some optimization (between dev and release).
[profile.iteration]
inherits = "dev"
opt-level = 1
debug = 1
incremental = true
lto = "off"
codegen-units = 16
