[package]
name = "hydroxide"
version = "0.1.3"
edition = "2024"
description = "CPU path tracer written in Rust"
license = "GPL-3.0-only"
repository = "https://github.com/JBlitzar/hydroxide"
include = [
    "src/**/*.rs",
    "benches/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "demo.scene",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fastrand = "2.3.0"
rayon = "1.11.0"
stl_io = "0.11.0"
image = "0.25.9"




wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-rayon = { version = "1.3.0", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
indicatif = { version = "0.18.4", optional = true, features = ["rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
flate2 = "1"
clap = { version = "4.6.0", features = ["derive"], optional = true }

[features]
default = ["native"]
native = ["indicatif", "clap"]
wasm = ["wasm-bindgen", "wasm-bindgen-rayon", "js-sys", "web-sys"]

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "render"
harness = false

[[bin]]
name = "hydroxide"
path = "src/main.rs"
required-features = ["native"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

# Fast local builds with some optimization (between dev and release).
[profile.iteration]
inherits = "dev"
opt-level = 1
debug = 1
incremental = true
lto = "off"
codegen-units = 16

# Maximum quality render.
[profile.extra]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
